--- a/examples/demo-inner-scroll.html
+++ b/examples/demo-inner-scroll.html
@@ -84,7 +84,7 @@
 
   <aside role="scripts">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
-    <script src="../lib/sticky.js"></script>
+    <script src="../src/sticky.js"></script>
     <script>angular.module('demo', ['sticky']).controller('demoCtrl', function($scope) {
           $scope.disableSticking = false;
         });
